<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/set_your_schedule"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/set_start_time_text"/>

        <Button
            android:id="@+id/set_beginning_time_button"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/set_end_time_text"/>

        <Button
            android:id="@+id/set_end_time_button"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/set_end_time_text"/>
    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/next_button_text"/>

</LinearLayout>